# scruters

./: .gitignore  Cargo.toml
crates/scruters/: Cargo.toml  README.md
crates/scruters/src/: cargo.rs  command.rs  main.rs  message.rs  state.rs  tui.rs  ui.rs  workspace.rs
crates/scruters/src/cargo/: cargo_test.rs  cargo_watch.rs
crates/scruters/src/state/: helpers.rs  logs.rs  screen.rs  testing.rs  v0.rs
crates/scruters/src/state/testing/: active_component.rs  auto_generated_groups.rs  group_name.rs  groups.rs  test_name.rs  test_results.rs  tests.rs
crates/scruters/src/state/testing/groups/: auto_generated_groups.rs  custom_groups.rs  group.rs  group_key.rs  group_name.rs  group_output.rs
crates/scruters/src/state/testing/groups/auto_generated_groups/: auto_generated_group_metadata.rs
crates/scruters/src/state/testing/tests/: test_name.rs  test_result.rs
crates/scruters/src/ui/: logs.rs  testing.rs
