[package]
name = "scruters"
description = "A TUI for Rust testing and more"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
