[package]
name = "scruters"
description = "A TUI for Rust testing and more"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true

[dependencies]
color-eyre.workspace = true
crossterm.workspace = true
futures.workspace = true
if_chain.workspace = true
itertools.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tui-logger.workspace = true

[lints]
workspace = true
